# Mocktopus

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  crates_io.md  crates_io_readme.md
.github/workflows/: test.yml
injector/: Cargo.toml
injector/src/: display_delegate.rs  header_builder.rs  lib.rs  lifetime_remover.rs
macros/: Cargo.toml  crates_io_readme.md
macros/src/: display_delegate.rs  header_builder.rs  item_injector.rs  lib.rs  lifetime_remover.rs
mock_macro/: Cargo.toml
mock_macro/src/: lib.rs
mock_macro_test/: Cargo.toml
mock_macro_test/src/: lib.rs  mock_trait_main.rs  reflection.rs
mock_macro_test/src/mod_a/: mod.rs  mod_b.rs
mock_trait/: Cargo.toml
mock_trait/src/: lib.rs  main.rs  mock_store.rs  mock_trait.rs  reflection.rs
mocktopus/: Cargo.toml
mocktopus/src/: lib.rs
mocktopus_macro/: Cargo.toml
mocktopus_macro/src/: lib.rs
mtest/: Cargo.toml  build  metadata.json  output.json
mtest/src/: filename_encoder.rs  main.rs  package_copier.rs  package_copy.rs  package_info.rs  package_kind.rs  workspace_copier.rs  workspace_copy.rs  workspace_info.rs  workspace_injector.rs
src/: lib.rs  mock_store.rs  mocking.rs  mocking_utils.rs
src/mocking/: mod.rs  utils.rs
tests/: gold.rs  injecting.rs  injecting_no_std.rs  method_mocking_experiments.rs  mocking.rs  mocking_diffrent_kinds_of_fns.rs  mocking_functions.rs  mocking_generic_functions.rs  mocking_generic_static_methods.rs  mocking_no_extern_crate.rs  mocking_regular_functions.rs  mocking_static_methods.rs  todo.rs  todo.txt
tests/generic_functions/: mod.rs
tests/mocking_fns/: mod.rs  when_fn_generic.rs  when_fn_generic_async.rs  when_fn_regular.rs  when_fn_regular_async.rs
tests/mocking_methods/: mod.rs  when_struct_generic_method_generic.rs  when_struct_generic_method_regular.rs  when_struct_regular_fn_generic.rs  when_struct_regular_fn_regular.rs  when_struct_regular_method_generic.rs  when_struct_regular_method_regular.rs
tests/mocking_methods_async/: mod.rs  when_struct_complex_method_regular_async.rs  when_struct_generic_method_generic_async.rs  when_struct_generic_method_regular_async.rs  when_struct_regular_method_generic_async.rs  when_struct_regular_method_regular_async.rs
tests/mocking_trait_defaults/: mod.rs  when_trait_generic_struct_generic_method_generic.rs  when_trait_generic_struct_generic_method_regular.rs  when_trait_generic_struct_regular_method_generic.rs  when_trait_generic_struct_regular_method_regular.rs  when_trait_regular_struct_generic_method_generic.rs  when_trait_regular_struct_generic_method_regular.rs  when_trait_regular_struct_regular_method_generic.rs  when_trait_regular_struct_regular_method_regular.rs
tests/mocking_traits/: mod.rs  when_trait_generic_struct_generic_method_generic.rs  when_trait_generic_struct_generic_method_regular.rs  when_trait_generic_struct_regular_method_generic.rs  when_trait_generic_struct_regular_method_regular.rs  when_trait_regular_struct_generic_method_generic.rs  when_trait_regular_struct_generic_method_regular.rs  when_trait_regular_struct_regular_method_generic.rs  when_trait_regular_struct_regular_method_regular.rs
tests/mod_file_1/: mod.rs  mod_file_2.rs
tests/mod_file_1/mod_file_3/: mod.rs
tests/module_annotated_declaration/: mod.rs
tests/regular_functions/: mod.rs
