[package]
name = "mocktopus"
version = "0.1.0"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "Mocking framework for Rust"
readme = "crates_io_readme.md"
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"

[badges]
travis-ci = { repository = "CodeSandwich/Mocktopus" }

[lib]
doctest = false

[dependencies]
mocktopus_macros = "0.1.0"

[workspace]
members = ["macros"]
