[package]
name = "mocktopus"
version = "0.7.5"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "Mocking framework for Rust"
readme = "crates_io_readme.md"
keywords = ["testing", "mocking", "tdd"]
categories = ["development-tools::testing"]
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"
exclude = ["logo.png", "logo.svg"]
edition = "2018"

[badges]
travis-ci = { repository = "CodeSandwich/Mocktopus" }

[lib]
doctest = false

[dependencies]
mocktopus_macros = "=0.7.5"

[workspace]
members = ["macros"]
