[package]
name = "mocktopus_macros"
version = "0.5.0"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "Mocktopus procedural macros"
readme = "crates_io_readme.md"
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "0.14.4", features = ["full"] }
quote = "0.6.3"
proc-macro2 = { version = "0.4.8", features = ["nightly"] }
