[package]
name = "mocktopus_macros"
version = "0.7.3"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "Mocktopus procedural macros"
readme = "crates_io_readme.md"
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "0.15.26", features = ["full"] }
quote = "0.6.11"
proc-macro2 = "0.4.27"
