[package]
name = "cargo-mtest"
version = "0.0.1"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "Mocktopus Cargo plugin"
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"

[dependencies]
cargo = "^0.22"
mocktopus_macros = { path = "../macros"}
rand = { git = "https://github.com/rust-lang-nursery/rand" }
cargo_metadata = "~0.5.3"
fs_extra = "~1.1.0"
cargo-edit = "0.3.0-beta.1"
data-encoding = "2.1.1"
filetime = "0.1.15"
#cargo_metadata = "0.3.3"
#copy_dir = "0.1.2"
#quote = "0.3.15"
#serde_json = "1.0"
#syn = { version = "0.11.11", features = ["full"] }
#toml = "^0.4.5"

[dev-dependencies]
#code-sandwich-crates-io-release-test = "0.1.4"
is-dev = "0.1.0"
